tests/baselines/reference/alwaysStrictModule2.errors.txt
error TS1390: The `bundledPackageName` option must be provided when using outFile and node module resolution with declaration emit.
tests/cases/compiler/a.ts(3,13): error TS1100: Invalid use of 'arguments' in strict mode.
tests/cases/compiler/b.ts(3,13): error TS1100: Invalid use of 'arguments' in strict mode.


!!! error TS1390: The `bundledPackageName` option must be provided when using outFile and node module resolution with declaration emit.
==== tests/cases/compiler/a.ts (1 errors) ====
    module M {
        export function f() {
            var arguments = [];
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        }
    }
    
==== tests/cases/compiler/b.ts (1 errors) ====
    module M {
        export function f2() {
            var arguments = [];
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        }
    }